--- a/src/index.css
+++ b/src/index.css
@@ -91,8 +91,8 @@ body iframe {
 }
 
 ::-webkit-scrollbar {
-  width: 7px;
-  border-radius: 10px;
+  width: 5px;
+  border-radius: 2px;
 }
  
 ::-webkit-scrollbar-track {
@@ -100,6 +100,6 @@ body iframe {
 }
  
 ::-webkit-scrollbar-thumb {
-  border-radius: 10px;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), inset 0px 1px 2px #FFFFFF, inset 0px 20px 40px rgba(255, 255, 255, 0.25), inset 0px -4px 4px #53B37E, inset 0px -40px 40px rgba(9, 10, 31, 0.2), inset 0px 4px 12px rgba(255, 255, 255, 0.4);
+  border-radius: 2px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), inset 0px 1px 2px #FFFFFF, inset 0px 20px 40px rgba(255, 255, 255, 0.25), inset 0px -4px 4px #2a2b2a, inset 0px -40px 40px rgba(9, 10, 31, 0.2), inset 0px 4px 12px rgba(255, 255, 255, 0.4);
 }
